--- a/index.html
+++ b/index.html
@@ -6765,7 +6765,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="styles/vendor.555daa5d.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/styles/vendor.555daa5d.css">
   <link rel="stylesheet" href="styles/main.5654408e.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
