fix external network call links

--- a/index.html
+++ b/index.html
@@ -6765,8 +6765,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/styles/vendor.555daa5d.css">
-  <link rel="stylesheet" href="styles/main.5654408e.css">
+  <link rel="stylesheet" href="https://georgedubinin.github.io/r2r_static/styles/vendor.555daa5d.css">
+  <link rel="stylesheet" href="https://georgedubinin.github.io/r2r_static/styles/main.5654408e.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -6843,7 +6843,7 @@
       <nav class="navbar navbar-expand-xl navbar-light bg-white align-items-start"
            style="padding-left:0px;margin-left:0px;padding-right:0px">
         <div class="container" style="padding-right:0px; padding-left:20px;margin-left:0px;margin-right:0px"><a
-          href="/"> <img id="nav-logo" src="../images/Logo.4b1519be.png"> </a>
+          href="/"> <img id="nav-logo" src="https://georgedubinin.github.io/r2r_static/images/Logo.4b1519be.png"> </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
@@ -6995,7 +6995,7 @@
           <div class="container text-center text-md-left py-4">
             <div class="row py-3"> <!-- Logo -->
               <div class="col-12 col-xl-3 mb-4"><img id="logo-footer" alt="R2R Logo"
-                                                     src="../images/Logo-Footer.17f76b85.png"></div> <!-- Main Links -->
+                                                     src="https://georgedubinin.github.io/r2r_static/images/Logo-Footer.17f76b85.png"></div> <!-- Main Links -->
               <div class="col-xl-3 col-md-4 col-sm-12 mx-auto mb-4"><p class="my-0"><a class="SSP-18 bold white"
                                                                                        href="/search">SEARCH CRUISES</a>
               </p>
@@ -7031,21 +7031,21 @@
           <div class="container footer-panel"> <!-- Logos -->
             <div class="row py-4 d-flex align-items-center"> <!-- NSF Logo -->
               <div class="col mb-4"><a href="https://www.nsf.gov/"> <img class="mx-auto d-block"
-                                                                         src="../images/NSF-Logo.svg.6bee8f44.png"
+                                                                         src="https://georgedubinin.github.io/r2r_static/images/NSF-Logo.svg.6bee8f44.png"
                                                                          alt="NSF Logo"> </a></div> <!-- NOAA Logo -->
               <div class="col mb-4"><a href="http://www.noaa.gov/"> <img class="mx-auto d-block"
-                                                                         src="../images/NOAA-Logo.0f1309a2.png"
+                                                                         src="https://georgedubinin.github.io/r2r_static/images/NOAA-Logo.0f1309a2.png"
                                                                          alt="NOAA Logo"> </a></div> <!-- ONR Logo -->
               <div class="col mb-4"><a href="https://www.onr.navy.mil/"> <img class="mx-auto d-block"
-                                                                              src="../images/ONR-Logo.b6f6332b.png"
+                                                                              src="https://georgedubinin.github.io/r2r_static/images/ONR-Logo.b6f6332b.png"
                                                                               alt="ONR Logo"> </a></div>
               <!-- SOI Logo -->
               <div class="col mb-4"><a href="https://schmidtocean.org/"> <img class="mx-auto d-block"
-                                                                              src="../images/SOI-Logo.fa712a33.png"
+                                                                              src="https://georgedubinin.github.io/r2r_static/images/SOI-Logo.fa712a33.png"
                                                                               alt="Schmidt Ocean Institute Logo"> </a>
               </div> <!-- OET Logo -->
               <div class="col mb-4"><a href="https://nautiluslive.org/"> <img class="mx-auto d-block"
-                                                                              src="../images/OET-Logo.0967e3ef.png"
+                                                                              src="https://georgedubinin.github.io/r2r_static/images/OET-Logo.0967e3ef.png"
                                                                               alt="Ocean Exploration Trust Logo"> </a>
               </div>
             </div>
